navbar z-index fix

--- a/Personal Portfolio Webpage/style.css
+++ b/Personal Portfolio Webpage/style.css
@@ -12,7 +12,6 @@ nav {
 #welcome-section {
     width: 100%;
     height: 100vh;
-    display: block;
     background-color: #3D2B3D;
     color: #D0FFCE;
     display: flex;
@@ -38,6 +37,7 @@ nav {
     height: 50px;
     width: 100%;
     position: fixed;
+    z-index: 1000;
     background-color: #9B1D20;
     top: 0;
     display: flex;
